GachaKit // Change a description to stop over-assert things.

--- a/Packages/GachaKit/Sources/GachaKit/Resources/Localizable.xcstrings
+++ b/Packages/GachaKit/Sources/GachaKit/Resources/Localizable.xcstrings
@@ -5695,73 +5695,73 @@
         "de" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Aufgrund gelegentlicher Serverprobleme kann es vorkommen, dass der Spielserver doppelte Gacha-Einträge mit falschen Transaktions-IDs zurücksendet, die die lokale Datenbank verschmutzen. Wenn der Bleichmodus aktiviert ist, verwendet diese App immer die neuesten Abrufergebnisse als vertrauenswürdige Quelle für korrekte Transaktions-IDs und entfernt die falschen Einträge lokal. Dies kann jedoch durch die verschmutzten Daten des Spielservers beeinträchtigt werden. Trotzdem werden alle Gacha-Daten nach Ablauf einer Spielversion statisch und vertrauenswürdig."
+            "value" : "Wir sind nicht befugt, öffentlich zu erklären, was tatsächlich auf dem Server mit den offiziellen Gacha-Daten passiert ist. Die folgenden Beschreibungen sind Annahmen, die auf Beobachtungen basieren. Aufgrund möglicher gelegentlicher Serverprobleme könnte der Spielserver möglicherweise doppelte Gacha-Einträge mit falschen Transaktions-IDs zurücksenden, was die lokale Datenbank verschmutzen könnte. Wenn der Bleichmodus aktiviert ist, verwendet diese App die neuesten Abrufergebnisse als vertrauenswürdige Quelle für korrekte Transaktions-IDs und entfernt die möglicherweise falschen Einträge lokal. Dies kann jedoch durch potenziell verschmutzte Daten des Spielservers beeinträchtigt werden. Trotzdem werden alle Gacha-Daten nach Ablauf einer Spielversion vermutlich statisch und vertrauenswürdig."
           }
         },
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Due to occasional server-side accidents, the game server may return duplicated gacha entries with incorrect transaction IDs, polluting the local database. If the bleaching mode is enabled, this app will use the latest fetch results as the trust source of correct transaction IDs and remove the incorrect entries on the local side, but this can be deceived by the polluted data from the game server. Nevertheless, as long as a game version deprecates, all gacha records during its operation period will become static and trustable."
+            "value" : "We are not authorized to publicly state what actually happened on the server hosting official gacha records. The following descriptions are assumptions based on observations. Due to possible occasional server-side issues, the game server might return duplicated gacha entries with incorrect transaction IDs, potentially polluting the local database. If the bleaching mode is enabled, this app will use the latest fetch results as the trusted source for correct transaction IDs and remove possibly incorrect entries locally, but this could be affected by potentially polluted data from the game server. Nevertheless, once a game version deprecates, all gacha records during its operation period are likely to become static and trustworthy."
           }
         },
         "es" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Debido a accidentes ocasionales del servidor, el servidor del juego puede devolver entradas de gacha duplicadas con identificaciones de transacción incorrectas, contaminando la base de datos local. Si el modo de blanqueo está activado, esta aplicación usará los resultados más recientes como fuente confiable de identificaciones correctas y eliminará las entradas incorrectas localmente, aunque podría ser engañada por los datos contaminados del servidor del juego. Sin embargo, una vez que una versión del juego quede obsoleta, todos los registros de gacha de su período de operación serán estáticos y confiables."
+            "value" : "No estamos autorizados a declarar públicamente qué pasó realmente en el servidor que aloja los registros oficiales de gacha. Las siguientes descripciones son suposiciones basadas en observaciones. Debido a posibles problemas ocasionales del servidor, el servidor del juego podría devolver entradas de gacha duplicadas con identificaciones de transacción incorrectas, lo que podría contaminar la base de datos local. Si el modo de blanqueo está activado, esta aplicación usará los resultados más recientes como fuente confiable para identificaciones correctas y eliminará las entradas posiblemente incorrectas localmente, aunque esto podría verse afectado por datos potencialmente contaminados del servidor del juego. Sin embargo, una vez que una versión del juego quede obsoleta, es probable que todos los registros de gacha de su período de operación se vuelvan estáticos y confiables."
           }
         },
         "fil" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Dahil sa mga hindi inaasahang insidente sa server, maaaring magbalik ang game server ng mga dobleng gacha entry na may maling transaction ID, na nagdudulot ng polusyon sa lokal na database. Kung naka-enable ang bleaching mode, gagamitin ng app na ito ang pinakabagong resulta ng pagkuha bilang mapagkakatiwalaang pinagmulan ng tamang transaction ID at aalisin ang maling entry, ngunit maaaring malinlang ng kontaminadong data mula sa game server. Gayunpaman, kapag ang isang game version ay nag-expire, lahat ng gacha record mula sa operasyon nito ay magiging static at mapagkakatiwalaan."
+            "value" : "Kami ay hindi awtorisadong maghayag sa publiko kung ano ang aktuwal na nangyari sa server na nagho-host ng mga opisyal na rekord ng gacha. Ang mga sumusunod na paglalarawan ay mga palagay batay sa mga obserbasyon. Dahil sa posibleng mga paminsan-minsang isyu sa server, maaaring magbalik ang game server ng mga dobleng gacha entry na may maling transaction ID, na posibleng magdulot ng polusyon sa lokal na database. Kung naka-enable ang bleaching mode, gagamitin ng app na ito ang pinakabagong resulta ng pagkuha bilang mapagkakatiwalaang pinagmulan ng tamang transaction ID at aalisin ang mga posibleng maling entry nang lokal, ngunit maaaring maapektohan ito ng potensyal na kontaminadong data mula sa game server. Gayunpaman, kapag ang isang game version ay nag-expire, malamang na ang lahat ng gacha record mula sa operasyon nito ay magiging static at mapagkakatiwalaan."
           }
         },
         "fr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "En raison d'accidents ponctuels côté serveur, le serveur de jeu peut renvoyer des entrées gacha dupliquées avec des identifiants incorrects, polluant la base de données locale. Si le mode de nettoyage est activé, cette application utilisera toujours les derniers résultats d'extraction comme source fiable pour les identifiants corrects et supprimera les entrées incorrectes localement, bien qu'elle puisse être trompée par les données polluées du serveur de jeu. Cependant, une fois qu'une version du jeu est obsolète, tous les enregistrements gacha de sa période d'exploitation deviennent statiques et fiables."
+            "value" : "Nous ne sommes pas autorisés à déclarer publiquement ce qui s'est réellement passé sur le serveur hébergeant les enregistrements officiels de gacha. Les descriptions suivantes sont des suppositions basées sur des observations. En raison de possibles incidents ponctuels côté serveur, le serveur de jeu pourrait renvoyer des entrées gacha dupliquées avec des identifiants incorrects, ce qui pourrait polluer la base de données locale. Si le mode de nettoyage est activé, cette application utilisera les derniers résultats d'extraction comme source fiable pour les identifiants corrects et supprimera les entrées potentiellement incorrectes localement, bien que cela puisse être affecté par des données potentiellement polluées du serveur de jeu. Cependant, une fois qu'une version du jeu est obsolète, il est probable que tous les enregistrements gacha de sa période d'exploitation deviennent statiques et fiables."
           }
         },
         "it" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "A causa di incidenti occasionali lato server, il server di gioco può restituire voci gacha duplicate con ID di transazione errati, inquinando il database locale. Se è abilitata la modalità di sbiancamento, questa app utilizzerà sempre gli ultimi risultati come fonte attendibile per identificare correttamente gli ID di transazione e rimuovere le voci errate localmente, ma potrebbe essere ingannata dai dati inquinati provenienti dal server di gioco. Tuttavia, una volta che una versione del gioco è obsoleta, tutti i record gacha del suo periodo operativo diventeranno statici e affidabili."
+            "value" : "Non siamo autorizzati a dichiarare pubblicamente cosa è realmente accaduto sul server che ospita i record ufficiali di gacha. Le seguenti descrizioni sono supposizioni basate su osservazioni. A causa di possibili incidenti occasionali lato server, il server di gioco potrebbe restituire voci gacha duplicate con ID di transazione errati, potenzialmente inquinando il database locale. Se è abilitata la modalità di sbiancamento, questa app utilizzerà gli ultimi risultati come fonte attendibile per identificare correttamente gli ID di transazione e rimuoverà le voci possibilmente errate localmente, ma ciò potrebbe essere influenzato da dati potenzialmente inquinati dal server di gioco. Tuttavia, una volta che una versione del gioco è obsoleta, è probabile che tutti i record gacha del suo periodo operativo diventino statici e affidabili."
           }
         },
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "ゲームサーバー側の偶然の突発的な故障により、サーバーから送り返されるガチャ記録データが重複したり、取扱番号に誤りがあったりすることがあります。この結果、端末内のデータベースが汚染される可能性があります。「異常なる既存データを掃除する」そのスィッチがONにした場合、このアプリは常に最新のガチャ記録を準じて、端末内のデータベースの取扱番号が正しいかどうかを点検し、誤ったデータを排除しようとしています。しかし、この汚染現象によって、点検中の判断が誤ってしまう可能性があります。いずれにせよ、ゲームのサービスが終了する時点で、サービス期間中のすべてのガチャ記録はサーバー側で確定し、信頼できる結果となります。"
+            "value" : "公式のガチャ記録を提供するサーバーで実際に何が起こったかは、弊アプリの開発チームとして断言することではございませんので、以下の説明は、観察に基づく推測です。サーバー側の偶発的な問題が起こる可能性により、ゲームサーバーから送り返されるガチャ記録データが重複したり、取扱番号に誤りがあったりする可能性があります。この結果、端末内のデータベースが汚染される可能性があります。「異常なる既存データを掃除する」スイッチがONの場合、このアプリは最新のガチャ記録を基準として、端末内のデータベースの取扱番号が正しいかどうかを点検し、誤ったデータを排除しようとします。しかし、この汚染現象により、点検中の判断が誤る可能性があります。いずれにせよ、ゲームのサービスが終了する時点で、サービス期間中のすべてのガチャ記録は、おそらくサーバー側で確定し、信頼できる結果となるでしょう。"
           }
         },
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "서버 측의 가끔 발생하는 사고로 인해, 게임 서버가 중복된 가챠 항목을 잘못된 트랜잭션 ID와 함께 반환하여 로컬 데이터베이스를 오염시킬 수 있습니다.漂白 모드가 활성화된 경우, 이 앱은 항상 최신 데이터를 신뢰 소스로 사용하고 로컬에서 잘못된 항목을 제거하려고 하지만, 게임 서버의 오염된 데이터로 인해 잘못된 판단이 있을 수 있습니다. 그러나 게임 버전이 종료되면 모든 가챠 기록은 고정되어 신뢰할 수 있게 됩니다."
+            "value" : "우리는 공식 가챠 기록을 호스팅하는 서버에서 실제로 무슨 일이 일어났는지 공개적으로 말할 권한이 없습니다. 다음 설명은 관찰에 기반한 가정입니다. 서버 측에서 발생할 수 있는 간헐적인 문제로 인해, 게임 서버가 잘못된 트랜잭션 ID와 함께 중복된 가챠 항목을 반환할 가능성이 있어, 로컬 데이터베이스를 오염시킬 수 있습니다.漂白 모드가 활성화된 경우, 이 앱은 최신 데이터를 신뢰 소스로 사용하여 로컬에서 잠재적으로 잘못된 항목을 제거하려고 하지만, 게임 서버에서 오는 잠재적으로 오염된 데이터에 의해 영향을 받을 수 있습니다. 그러나 게임 버전이 종료되면, 운영 기간 동안의 모든 가챠 기록은 아마도 고정되어 신뢰할 수 있게 될 것입니다."
           }
         },
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Из-за случайных сбоев на сервере игра может возвращать дублированные записи гача с неправильными ID транзакций, что загрязняет локальную базу данных. Если включён режим отбеливания, приложение будет использовать последние результаты извлечения как надёжный источник для проверки правильности ID транзакций и удаления неправильных записей локально, но может быть обмануто загрязнёнными данными с сервера. Тем не менее, как только версия игры устаревает, все записи гача за период её работы становятся статичными и надёжными."
+            "value" : "Мы не уполномочены публично заявлять, что именно произошло на сервере, где хранятся официальные записи гача. Следующие описания являются предположениями, основанными на наблюдениях. Из-за возможных случайных сбоев на сервере игра может возвращать д하며, как только версия игры устаревает, вероятно, все записи гача за период её работы станут статичными и надёжными."
           }
         },
         "vi" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Do sự cố hiếm gặp ở máy chủ, máy chủ trò chơi có thể trả về các mục gacha trùng lặp với ID giao dịch không chính xác, gây ô nhiễm cơ sở dữ liệu cục bộ. Nếu chế độ tẩy trắng được bật, ứng dụng này sẽ sử dụng kết quả mới nhất làm nguồn tin cậy cho ID giao dịch chính xác và loại bỏ các mục sai cục bộ, nhưng có thể bị lừa bởi dữ liệu bị ô nhiễm từ máy chủ trò chơi. Tuy nhiên, khi phiên bản trò chơi không còn được hỗ trợ, tất cả các bản ghi gacha trong giai đoạn hoạt động của nó sẽ trở nên ổn định và đáng tin cậy."
+            "value" : "Chúng tôi không được phép công khai tuyên bố điều gì thực sự đã xảy ra trên máy chủ lưu trữ các bản ghi gacha chính thức. Các mô tả sau đây là những giả định dựa trên quan sát. Do các sự cố có thể xảy ra ở máy chủ, máy chủ trò chơi có thể trả về các mục gacha trùng lặp với ID giao dịch không chính xác, có khả năng gây ô nhiễm cơ sở dữ liệu cục bộ. Nếu chế độ tẩy trắng được bật, ứng dụng này sẽ sử dụng kết quả mới nhất làm nguồn tin cậy cho ID giao dịch chính xác và loại bỏ các mục có thể sai cục bộ, nhưng điều này có thể bị ảnh hưởng bởi dữ liệu tiềm tàng bị ô nhiễm từ máy chủ trò chơi. Tuy nhiên, khi phiên bản trò chơi không còn được hỗ trợ, có lẽ tất cả các bản ghi gacha trong giai đoạn hoạt động của nó sẽ trở nên ổn định và đáng tin cậy."
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "由于游戏服务器端偶发的故障，服务器回传的抽卡记录数据可能会重复、或带有错误的流水号，造成本地数据库被污染的情况。如果启用「清理既存的异常记录」，本 App 将始终以最新获取的抽卡记录作为依据、来判断本地数据库的数据的流水号是否正确、据此筛除可能的错误数据。但这个过程可能会因为这个污染现象而被误导。无论如何，某个游戏版本在结束营运时，营运期间的所有抽卡记录都会在服务器端被固定下来、成为可信结果。"
+            "value" : "我们无权公开断言「托管官方抽卡记录的服务器实际发生了什么」。以下描述是基于观察的假设。由于服务器端可能偶发的故障，服务器回传的抽卡记录数据可能会出现重复或带有错误的流水号，这可能会造成本地数据库被污染。如果启用「清理既存的异常记录」，本 App 将以最新获取的抽卡记录作为依据，判断本地数据库的流水号是否正确，并据此筛除可能错误的记录。但这个过程可能会因潜在的污染数据而受到影响。无论如何，当某个游戏版本结束营运时，营运期间的所有抽卡记录很可能会在服务器端固定下来，成为可信结果。"
           }
         },
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "由於遊戲伺服器端偶發的故障，伺服器回傳的抽卡記錄資料可能會重複、或帶有錯誤的流水號，造成本機資料庫被污染的情況。如果啟用「清理既存的異常記錄」，敝應用將始終以最新獲取的抽卡記錄作為依據、來判斷本機資料庫的資料的流水號是否正確、據此篩除可能的錯誤資料。但這個過程可能會因為這個污染現象而被誤導。無論如何，某個遊戲版本在結束營運時，營運期間的所有抽卡記錄都會在伺服器端被固定下來、成為可信結果。"
+            "value" : "我們無權公開斷言「托管官方抽卡記錄的伺服器實際發生了什麼」。以下描述是基於觀察的假設。由於伺服器端可能偶發的故障，伺服器回傳的抽卡記錄資料可能會出現重複或帶有錯誤的流水號，這可能會造成本機資料庫被污染。如果啟用「清理既存的異常記錄」，敝應用將以最新獲取的抽卡記錄作為依據，判斷本機資料庫的流水號是否正確，並據此篩除可能錯誤的記錄。但這個過程可能會因潛在的污染資料而受到影響。無論如何，當某個遊戲版本結束營運時，營運期間的所有抽卡記錄很可能會在伺服器端固定下來，成為可信結果。"
           }
         }
       }
@@ -5771,73 +5771,73 @@
         "de" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Lokale Datenbank kann verschmutzt werden? Warum?"
+            "value" : "Warum erscheinen ungültige Datensätze in den abgerufenen Ergebnissen?"
           }
         },
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Local database can get polluted? Why?"
+            "value" : "Why invalid records appear in pulled results?"
           }
         },
         "es" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "¿La base de datos local puede contaminarse? ¿Por qué?"
+            "value" : "¿Por qué aparecen registros no válidos en los resultados obtenidos?"
           }
         },
         "fil" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Ang lokal na database ay maaaring marumihan? Bakit?"
+            "value" : "Bakit lumilitaw ang mga hindi wastong rekord sa mga hinintay na resulta?"
           }
         },
         "fr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "La base de données locale peut-elle être polluée ? Pourquoi ?"
+            "value" : "Pourquoi des enregistrements invalides apparaissent-ils dans les résultats extraits ?"
           }
         },
         "it" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Il database locale può essere danneggiato? Perché?"
+            "value" : "Perché compaiono record non validi nei risultati estratti?"
           }
         },
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "端末内のデータベースが汚染されてしまう恐れとは？"
+            "value" : "なぜ取得した結果に異常な記録がでますか？"
           }
         },
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "로컬 데이터베이스가 오염될 수 있나요? 왜죠?"
+            "value" : "왜 가져온 결과에 유효하지 않은 레코드가 나타나나요?"
           }
         },
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Локальная база данных может быть загрязнена? Почему?"
+            "value" : "Почему в полученных результатах появляются недействительные записи?"
           }
         },
         "vi" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Cơ sở dữ liệu cục bộ có thể bị ô nhiễm? Tại sao?"
+            "value" : "Tại sao các bản ghi không hợp lệ xuất hiện trong kết quả được truy xuất?"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "为什么本地资料库会被污染？"
+            "value" : "为什么拉取的结果中会出现异常记录？"
           }
         },
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "為什麼本機資料庫會被污染？"
+            "value" : "為什麼在拉取的結果中會出現異常記錄？"
           }
         }
       }
